--- a/config/west.yml
+++ b/config/west.yml
@@ -2,12 +2,10 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: tklzg 
-      url-base: https://github.com/tklzg
   projects:
     - name: zmk
-      remote: tklzg
-      revision: encoder
+      remote: zmkfirmware
+      revision: main
       import: app/west.yml
   self:
     path: config
