--- a/config/splitkb_aurora_lily58.conf
+++ b/config/splitkb_aurora_lily58.conf
@@ -11,6 +11,8 @@ CONFIG_ZMK_WIDGET_WPM_STATUS=y
 #CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
 CONFIG_ZMK_KEYBOARD_NAME="Julian's SplitKB"
 
+CONFIG_BT_DEVICE_NAME_MAX=20
+
 # Uncomment the following lines to enable RGB underglow
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=n
